actualización de la documentación

--- a/doc/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
+++ b/doc/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
@@ -1,6 +1,6 @@
 \capitulo{5}{Aspectos relevantes del desarrollo del proyecto}
 
-Este apartado recoge los aspectos más interesantes del desarrollo del proyecto, incluyendo desde el inicio del proyecto, metodologías usadas y formación, hasta el desarrollo de software, diseño de la aplicación y resolución de problemas.
+Este apartado recoge los aspectos más interesantes del desarrollo del proyecto, incluyendo desde el inicio del proyecto y formación, hasta el desarrollo de software, diseño de la aplicación y resolución de problemas.
 
 
 \subsection{Inicio de proyecto}
