--- a/doc/tex/E_Manual_usuario.tex
+++ b/doc/tex/E_Manual_usuario.tex
@@ -41,7 +41,7 @@ La barra de navegación cuenta con el logotipo de la aplicación en el que si lo
 
 Esta barra va a estar presente en todas las páginas de la aplicación, por lo que podemos acceder a las funcionalidades mencionadas anteriormente en cualquier momento, excepto si utilizamos la aplicación en una pantalla pequeña como puede ser la de un móvil, en la cual la barra de navegación se vería así y tan solo podríamos acceder a la página principal, al inicio de sesión y a cerrar sesión.
 
-\imagen{anexos/user_manual/barra_navegacion_movil}{Barra de navegación.}{0.8}
+\imagen{anexos/user_manual/barra_navegacion_movil}{Barra de navegación móvil.}{0.8}
 
 Los botones de \textit{Iniciar Sesión} y \textit{Cerrar Sesión}, no tienen confusión, ya que si pasas el cursor por encima del botón te muestra el nombre de la función que realiza.
 
